feat: bump required version to Java 21